id user safeguards
